--- a/invocation/javascript/client/package.json
+++ b/invocation/javascript/client/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@dapr/dapr": "^3.4.1",
     "axios": "^1.7.4",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.3",
+    "express": "^4.21.0",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.2"
   }
 }
