--- a/state/javascript/package.json
+++ b/state/javascript/package.json
@@ -14,6 +14,9 @@
     "@dapr/dapr": "^3.4.1",
     "axios": "^1.7.4",
     "body-parser": "^1.20.2",
-    "cloudevents": "^8.0.2"
+    "cloudevents": "^8.0.2",
+    "express": "^4.21.0",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.2"
   }
 }
